[package]
name = "flaq"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
colored = "2.1.0"
colorize = "0.1.0"
datetime = "0.5.2"
itertools = "0.12.1"
metaflac = "0.2.5"
pest = "2.7.10"
pest_consume = "1.1.3"
pest_derive = "2.7.10"
struct_iterable = "0.1.1"
strum = { version = "0.26.2", features = ["strum_macros"] }
strum_macros = "0.26.2"
thiserror = "1.0.59"

[build-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
