[package]
name = "flaq"
description = "A simple CLI tool for modifying and querying metadata tags for `.flac` files."
license = "MIT"
version = "0.3.1"
edition = "2021"

[profile.release]
lto = true

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
colored = "2.1.0"
itertools = "0.12.1"
lazy_static = "1.4.0"
metaflac = "0.2.5"
pest = "2.7.10"
pest_derive = "2.7.10"
thiserror = "1.0.59"

[build-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
